--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <a href="index.html" class="hover:underline">Home</a>
         <a href="#new-arrivals" class="hover:underline">New Arrivals</a>
         <a href="#most-wanted" class="hover:underline">Most Wanted</a>
-        <a href="/collections.html" class="hover:underline">Collections</a>
-        <a href="/contact.html" class="hover:underline">Contact Us</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
       <button id="side-navbar-activate" class="md:hidden text-xl">
         <i class="fas fa-bars"></i>
@@ -85,8 +85,8 @@
         <a href="index.html" class="hover:underline">Home</a>
         <a href="#new-arrivals" class="hover:underline">New Arrivals</a>
         <a href="#most-wanted" class="hover:underline">Most Wanted</a>
-        <a href="/collections.html" class="hover:underline">Collections</a>
-        <a href="/contact.html" class="hover:underline">Contact Us</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
     </div>
 
