--- a/collections.html
+++ b/collections.html
@@ -57,9 +57,9 @@
       <h1 class="text-2xl font-bold text-primary">GEN Z</h1>
 
       <div class="hidden md:flex gap-6">
-        <a href="index.html" class="hover:underline">Home</a>
-        <a href="/collections.html" class="hover:underline">Collections</a>
-        <a href="/contact.html" class="hover:underline">Contact Us</a>
+        <a href="/Gen-Z/index.html" class="hover:underline">Home</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
 
       <button
@@ -80,9 +80,9 @@
         </button>
       </div>
       <div class="flex flex-col px-6 space-y-4">
-        <a href="index.html" class="hover:underline">Home</a>
-        <a href="/collections.html" class="hover:underline">Collections</a>
-        <a href="/contact.html" class="hover:underline">Contact Us</a>
+        <a href="/Gen-Z/index.html" class="hover:underline">Home</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
     </div>
 
