--- a/collections.html
+++ b/collections.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products – GEN Z</title>
-
-    <!-- Tailwind CSS -->
+    <link rel="icon" type="image/x-icon" href="/icon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <!-- Montserrat Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- FontAwesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -58,7 +55,9 @@
 
       <div class="hidden md:flex gap-6">
         <a href="/Gen-Z/index.html" class="hover:underline">Home</a>
-        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline"
+          >Collections</a
+        >
         <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
 
@@ -81,7 +80,9 @@
       </div>
       <div class="flex flex-col px-6 space-y-4">
         <a href="/Gen-Z/index.html" class="hover:underline">Home</a>
-        <a href="/Gen-Z/collections.html" class="hover:underline">Collections</a>
+        <a href="/Gen-Z/collections.html" class="hover:underline"
+          >Collections</a
+        >
         <a href="/Gen-Z/contact.html" class="hover:underline">Contact Us</a>
       </div>
     </div>
