--- a/collections.html
+++ b/collections.html
@@ -302,12 +302,14 @@
           <ul class="space-y-1 text-sm">
             <li><a href="#" class="hover:text-gray-300">Home</a></li>
             <li>
-              <a href="/collections.html" class="hover:text-gray-300"
+              <a href="/Gen-Z/collections.html" class="hover:text-gray-300"
                 >Collections</a
               >
             </li>
             <li>
-              <a href="/contact.html" class="hover:text-gray-300">Contact Us</a>
+              <a href="/Gen-Z/contact.html" class="hover:text-gray-300"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
