--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <div class="text-center md:text-left">
           <h3 class="font-semibold mb-2">Quick Links</h3>
           <ul class="space-y-1 text-sm">
-            <li><a href="#" class="hover:text-gray-300">Home</a></li>
+            <li><a href="index.html" class="hover:text-gray-300">Home</a></li>
             <li>
               <a href="collections.html" class="hover:text-gray-300"
                 >Collections</a
