--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GEN Z</title>
-    <link rel="icon" type="image/x-icon" href="/icon.png">
+    <link rel="icon" type="image/x-icon" href="/Gen-Z/icon.png">
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
